        LAgraph_bc_bactch5); BC now faster than GAP for kron, urand, and
        twitter (the 3 largest matrices in the GAP benchmark).
    * GrB_wait(), with no inputs: removed
    * GrB_wait(&object): polymorphic function added
    * GrB_*_nvals: no longer guarantees completion; use GrB_wait for that
    * GrB_error: now has two parameters: a string (char **) and an object
    * GrB_Matrix_reduce_BinaryOp: limited to certain built-in ops
    * GrB_*_extractTuples: may return indices out of order
    * removed internal features: GBI iterator, slice and hyperslice matrices
    * bitmap/full matrices and vectors added: faster and lower memory usage
        when many entries present in a matrix or vector
    * GxB_SPARSITY_CONTROL, GxB_SPARSITY_STATUS added: for matrix get/set
    * positional operators and semirings: GxB_FIRSTI_INT32 and related ops
    * jumbled matrices: sort left pending, like zombies and pending tuples
    * GxB_get/set: added GxB_SPARSITY_* (hyper, sparse, bitmap, or full)
    * GxB_HYPER: enum renamed to GxB_HYPER_SWITCH
    * GxB_BITMAP_SWITCH added: for matrix/vector get/set and global get/set
    * GxB*import/export: API modified
    * GxB_SelectOp: nrows and ncols removed from function signature
    * OpenMP tasking removed from mergesort: just as fast; now ports to Windows
    * GxB_BURBLE added: for diagnostic output
    * (21) bug fix: A({lo,hi})=scalar in MATLAB; A(lo:hi)=scalar was OK

Version 3.3.3, July 14, 2020

    * (20) bug fix: w<mask>=A*u with mask non-empty and u empty (issue #13).
        affects mxm (A*B when B is a vector), vxm, and mxv.

Version 3.3.2, July 3, 2020

    * minor changes to build system
    * GraphBLAS v3.3.2 released as part of SuiteSparse v5.8.0

Version 3.3.1, June 30, 2020

    * (19) bug fix: incorrect typecasting when GrB_assign or GxB_subassign
        is simple: C=A where A is sparse or dense, in GB_dense_subassign_24.
        Bug introduced in v3.2.0.